# STVadmin_processing

./: .gitignore  README.md  home.py  main.py  old_tvw_create_csv.py  pyproject.toml  requirements.txt
demo/: STVAdmin_export_client_demo.ipynb  helfereinsaetze_nach_riegen.ipynb  helper-assignments-2.csv  helper-assignments.csv  spola_mitgliedersuche.ipynb  temp_main_db_backup.pickle
src/: STVAdmin_export_client.py  __init__.py  home.py  main.py  old_main.py
src/config/: paths.py
src/utils/: MailBasedFamily_to_Cleverreach_translator.json  STVAdmin_export_translator.json  STVAdmin_organ_to_riegenlist.json  STVAdmin_to_AdressDB_translator.json  STVAdmin_to_Cleverreach_category_translator.json  adress_databases.py  cleverreach_client.py  cleverreach_database.py  credentials.py  database.py  databases.py  dynamics_client.py
tests/: test_cleverreach_database.py  test_database.py  test_mail_based_database.py  test_person.py
tests/data/: test_cleverreach_database_expected_output.csv  test_database.csv  test_database.xlsx
