[project]
name = "STVadmin_processing"
version = "0.0.0"
description = "Export and process STVadmin data"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "1password",
    "selenium",
    "numpy",
    "openpyxl",
    "streamlit",
]

[dependency-groups]
test = [
    "pytest",
    "jupyter",
    "ruff",
    "mypy",
]

[tool.uv]
default-groups = ["test"]

[tool.mypy]
files = "src, tests"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

[tool.pytest.ini_options]
pythonpath = ["."]

